[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyHiTOP"
version = "0.1.0"
description = "Functions for HiTOP. Python port of the R hitop package."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Python port contributors" },
]
keywords = ["HiTOP", "PID-5", "psychopathology", "psychometrics", "scoring"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.9",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
"Upstream R package" = "https://github.com/jmgirard/hitop"

[tool.hatch.build.targets.wheel]
packages = ["src/pyhitop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
